views/style.sass
$color1: rgba(238,238,238,0.8)
$color2: rgba(255,255,255,0.8)
$webkit_gradient: -webkit-gradient(linear, left top, left bottom, from($color1), to($color2))
$moz_gradient: -moz-linear-gradient(top,$color1,$color2)

$webkit_gradient_inverted: -webkit-gradient(linear, left top, left bottom, from($color2 / 1.4), to($color1 / 1.1))
$moz_gradient_inverted: -moz-linear-gradient(top,$color2 / 1.4,$color1 / 1.1)

*
  font-family: "trebuchet MS", verdana, sans-serif

body
  padding: 0px
  margin: 0px
  height: 100%
  overflow: hidden
  background-color: $color1
  background: $webkit_gradient
  background: $moz_gradient

html
  height: 100%
  overflow: hidden

a, a:hover, a:link, a:visited
  color: inherit

#background
  width: 100%
  height: 100%
  position: absolute
  top: 0px
  left: 0px
  color: transparent
  background-size: cover
  background-position: 50% 50%
  background-repeat: none
  z-index: -1

#background:after
  width: 100%
  height: 100%
  position: absolute
  top: 0px
  left: 0px
  content: ''
  background-image: url('data:image/jpeg;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABhJREFUeNpiYGBgePz//38GRhABAgABBgBFTAbfCBNE2AAAAABJRU5ErkJggg==')
  

#credits, #header
  background-color: rgba(255,255,255,0.4)
  color: black
  opacity: 0.8
  filter: alpha(opacity=80)
  font-size: 14px
  height: 2em
  line-height: 2em

#credits
  position: absolute
  left: 0px
  bottom: 0px
  z-index: 0
  width: 100%
  text-align: right

  a
    text-decoration: none
    padding-right: 1em

#header
  text-align: center
  z-index: 100

  a
    padding: 0px 1em
    margin: 0px
    padding-left: 16px
    text-decoration: none
    background-position: center left
    background-repeat: no-repeat

  #signin, #signout, #edit, #settings
    display: none

#profile
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAkAAAAMCAYAAACwXJejAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAFBJREFUGNNjYEAAfSB+D8T/obQ+AxawH6oAhveTragfTVE/Aw6QD8T1UJo8IA/E69GsWw8Vhyt4j6YAht/DFK7HoQDZRLwKYJg4RecJKDgPAMVHQDY4+DlXAAAAAElFTkSuQmCC)

#signin
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAGZJREFUKM9jYEAAeSCeD8Tvgfg/FL+HiskzoAF9NIXo+D1UDdxkfIqRNYFtmk9AYT2SgSC1eE2PB2J+ID6PZAuKlfV4FMMwhsfi8Sj+j+4kmCZcit9j8/R7HIrhniY5WEmOOJKSBgBzwGsd+PIwxQAAAABJRU5ErkJggg==)

#signout
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAFpJREFUKM9jYEAAeSCeD8Tvgfg/FL+HiskzoAF9NIXo+D1UDdxkfIqRNYFtmo8keB6NPx8qhsxHMX0+1Nb5aGxkWzCshilEVwzDpGsg2Ukke5rkYCU54khKGgAq+WaFRQ0R/AAAAABJRU5ErkJggg==)

#edit
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAFJJREFUKM+V0MEJACAMQ9G/gfufHMURMpJeFIrUqIVe5IXawrkK0IA+u823I1bAMWRxTYIWZ9MsXlX3L71graW/MAHrBbNdQDdMcms5nAUs5hcPbZlAWZtGVpAAAAAASUVORK5CYII=)

a#settings
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAwAAAAMCAYAAABWdVznAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAFpJREFUKM9jYGBgiAfi/0Bsz4AA94F4PxIfRY09Fg370TTY01zDfyTMMB/KmI9Hw3momvMYuolxUj6Uk0+uH+yhwXofTQynhnokJ9YTo0Ee6rnzUDZ94gGuBgBJKT3b2QkbggAAAABJRU5ErkJggg==)

a#help
  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAMCAYAAABfnvydAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAHFJREFUGBkFwYEAxDAQBMAxeIQiBCEIRQlCEYoQlEMIwiMcwnYGYKERBIULYCFoFA6CP37QaAwAbAQLggIATAQPBAcAcCN4oBBswEAjmDDQCF40gg0AF4Ig2AAAcBAENwAAAAAAAHhRKAwAACgEwQT4AEXFK0RXVmjoAAAAAElFTkSuQmCC)

.clear
  clear: both

div#settings
  padding: 1em
  height: 100%
  font-size: 11pt

  hr
    height: 1px
    background-color: $color1
    border: 0px

// --------------------- Auto completer --------------------------

.autocomplete
  margin-top: 4px
  border: 1px solid #ccc
  background-color: #fff
  z-index: 50
  -moz-border-radius: 6px
  -webkit-border-radius: 6px
  border-radius: 6px

  div
    margin:	1px
    padding: 0.2em 1.5em 0.2em 1em
    cursor: pointer
    font-weight: normal
    white-space: nowrap
    font-size: 15px
    font-style: italic
    line-height: 1.5em
    display: none

  div.hovered
    background: $webkit_gradient_inverted
    background: $moz_gradient_inverted
    color: #fff
    -moz-border-radius: 6px
    -webkit-border-radius: 6px
    border-radius: 6px


  div.match
    display: block

// --------------------- Command --------------------------

#commandline
  margin: 200px auto auto auto
  width: 600px
  height: auto
  padding: 15px 5px
  text-align: center
  border: 1px solid #ccc
  border-radius: 10px 10px
  background-color: $color1
  background: $webkit_gradient
  background: $moz_gradient

#input
  -webkit-appearance: textfield
  -webkit-user-select: text
  margin: 0px
  top: 205px
  left: 215px
  width: 550px
  border: 0px solid red
  outline: none
  font-size: 25px
  height: 30px
  color: black
  vertical-align: bottom
  background-color: transparent

#question
  display: none
  width: 600px
  text-align: center
  margin: 10px auto auto auto
  border: 0px solid red

  #label
    color: black
    z-index: 2

    span
      color: #54acff

  #answer
    -webkit-appearance: textfield
    -webkit-user-select: text
    border: 0px solid red
    outline: none
    padding: 0px
    width: 350px
    color: black
    z-index: 1
    background-color: transparent

  #label,#answer
    font-size: 20px
      
// --------------------- Edit Popup --------------------------

.action
  display: block
  padding: 3px 10px
  -webkit-border-radius: 2px 2px
  -moz-border-radius: 2px 2px
  border-radius: 2px 2px
  border: solid 1px rgb(153, 153, 153)
  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgb(255, 255, 255)), to(rgb(221, 221, 221)))
  background: -moz-linear-gradient(top, rgb(255, 255, 255), rgb(221, 221, 221))
  color: #333
  text-decoration: none
  cursor: pointer
  display: inline-block
  text-align: center
  text-shadow: 0px 1px 1px rgba(255,255,255,1)
  line-height: 1
  margin-left: 3px

.action:hover
  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgb(240, 240, 240)), to(rgb(221, 221, 221)))
  background: -moz-linear-gradient(top, rgb(240, 240, 240), rgb(221, 221, 221))

.action:active
  /* hide dotted outline in Firefox */
  outline: 0px solid
  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgb(200, 200, 200)), to(rgb(221, 221, 221)))
  background: -moz-linear-gradient(top, rgb(200, 200, 200), rgb(221, 221, 221))

#commands
  height: 400px
  overflow: auto

  .command
    display: block
    clear: both
    border: 1px solid transparent
    margin: 0px 1px
    padding: 4px 2px
    border-bottom: 1px solid $color1

  .command:hover
    cursor: pointer
    background-color: #eee

  .name, .url
    display: inline-block
    vertical-align: bottom
    font-size: 11pt

  div.name, div.url
    line-height: 24px

  .name
    width: 40%

  .url
    width: 59%

#command-form

  label, input
    display: block
    margin-left: 3px
    margin-bottom: 0.5em
    font-size: 11pt
    line-height: 24px

  input
    width: 90%

// --------------------- Simple Modal --------------------------

#simple-modal-overlay
  position: fixed
  display: block
  z-index: 99998
  top: 0
  left: 0
  width: 100%
  height: 100%
  background-color: #000000
  background-position: center center
  background-repeat: no-repeat
  background: -webkit-gradient(radial, center center, 0, center center, 460, from(#ffffff), to(#333))
  background: -webkit-radial-gradient(circle, #ffffff, #333)
  background: -moz-radial-gradient(circle, #ffffff, #333)
  background: -ms-radial-gradient(circle, #ffffff, #333)

.simple-modal
  /* Style rewrite */

  width: 600px
  left: 20px
  top: 20px
  /* */

  position: absolute
  position: fixed
  margin: 0
  color: #808080
  font-size: 13px
  font-weight: normal
  line-height: 18px
  background-color: #FFFFFF
  border: 1px solid #EAEEFA
  border: 1px solid rgba(234, 238, 250, 0.6)
  -webkit-box-shadow: 0 0 3px rgba(0, 0, 0, 0.6)
  -moz-box-shadow: 0 0 3px rgba(0, 0, 0, 0.6)
  box-shadow: 0 0 3px rgba(0, 0, 0, 0.6)
  z-index: 99999
  border-radius: 6px
  -webkit-border-radius: 6px
  -moz-border-radius: 6px
  border-radius: 6px

.simple-modal .simple-modal-header
  padding: 5px 15px
  margin: 0
  border-bottom: 1px solid #EEEEEE

.simple-modal .simple-modal-header h1
  margin: 0
  color: #404040
  font-size: 18px
  font-weight: bold
  line-height: 36px

.simple-modal a.close
  position: absolute
  right: 15px
  top: 15px
  color: #999
  font-size: 17px
  font-weight: normal
  line-height: 10px
  text-decoration: none

.simple-modal a.close:hover
  color: #444

.simple-modal .simple-modal-body
  padding: 15px

.simple-modal .simple-modal-body div.contents
  overflow: hidden

.simple-modal .simple-modal-body p
  font-size: 13px
  font-weight: normal
  color: #606060
  line-height: 18px

.simple-modal .simple-modal-body p img
  display: block
  margin: 0 auto 10px auto

.simple-modal .simple-modal-footer
  display: block
  background-color: #F5F5F5
  padding: 14px 15px 15px
  border-top: 1px solid #EEEEEE
  -webkit-border-radius: 0 0 6px 6px
  -moz-border-radius: 0 0 6px 6px
  border-radius: 0 0 6px 6px
  -webkit-box-shadow: inset 0 1px 0 #FFF
  -moz-box-shadow: inset 0 1px 0 #FFF
  box-shadow: inset 0 1px 0 #FFF
  zoom: 1
  margin-bottom: 0
  text-align: center

.simple-modal .simple-modal-footer a.btn
  text-decoration: none
  cursor: pointer
  display: inline-block
  background-repeat: no-repeat
  padding: 5px 14px 6px
  color: #333
  font-size: 13px
  line-height: normal
  border: 1px solid transparent
  -webkit-transition: 0.2s linear all
  -moz-transition: 0.2s linear all
  transition: 0.2s linear all
  border-radius: 3px
  -webkit-border-radius: 3px
  -moz-border-radius: 3px

.simple-modal .simple-modal-footer a.btn.primary
  color: #FFF
  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25)
  background-color: #999
  background-repeat: repeat-x
  margin-right: 15px

.simple-modal .simple-modal-footer a.btn.primary:hover
  border: 1px solid #444
  background-color: #444

.simple-modal .simple-modal-footer a.btn.secondary
  padding: 5px 2px 6px

.simple-modal .simple-modal-footer a.btn.secondary:hover
  color: #999

/* Draggable style */
.simple-modal.draggable .simple-modal-header:hover
  cursor: move
  background-color: #f8f8f8
  -webkit-border-top-left-radius: 6px
  -webkit-border-top-right-radius: 6px
  -moz-border-radius-topleft: 6px
  -moz-border-radius-topright: 6px
  border-top-left-radius: 6px
  border-top-right-radius: 6px

/* Loading style */
.simple-modal.loading .simple-modal-body
  min-height: 60px

.simple-modal.loading .simple-modal-body div.contents
  display: none

.simple-modal.loading .close, .simple-modal.loading .simple-modal-header, .simple-modal.loading .simple-modal-footer
  display: none

/* Hide header */
.simple-modal.hide-header .simple-modal-header
  display: none

/* Hide header */
.simple-modal.hide-footer .simple-modal-footer
  display: none

